feat: get and create event by auth token
